fixed horizontal scrolling issue

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -973,7 +973,7 @@ About page - Personality box
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: 90%;
     height: 100%;
     margin-bottom: 30px;
     -webkit-box-align: center;
@@ -1040,8 +1040,8 @@ About page - Personality box
 }
 
 .tag-container ul {
-    width: 100%;
-    padding-left: 80px;
+    width: 90%;
+    padding-left: 20px;
 }
 
 .bold {
@@ -1049,15 +1049,15 @@ About page - Personality box
 }
 
 .tag-container li {
-    font-size: 1.3em;
-    padding-right: 70px;
+    font-size: 1.2em;
+    // padding-right: 70px;
 }
 
 .portrait-container {
     display: inline;
     text-align: center;
     height: 100%;
-    width: 100%;
+    width: 95%;
 }
 
 .portrait-container > div::before {
